Cleaned up web layout, no more bleeding text

--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,27 @@
       </div>
       <div id="profile_name">
         <h1>Bruce W. Lesko Jr.</h1>
-        <div id="contact_information">
-            <div id="github">
-              <a href="https://github.com/BruceNotLee">
-                <h2>Github</h2>
-              </a>
-            </div>
-            <div id="linkedin">
-              <a href="https://www.linkedin.com/in/bruce-lesko/">
-                <h2>LinkedIn</h2>
-              </a>
-            </div>
-            <div id="twitter">
-              <a href="https://twitter.com/B_Lesko?lang=en"><h2>Twitter</h2>
-              </a>
-            </div>
-        </div>
+
       </div>
     </header>
+    <nav>
+      <div id="contact_information">
+          <div id="github">
+            <a href="https://github.com/BruceNotLee">
+              <h2>Github</h2>
+            </a>
+          </div>
+          <div id="linkedin">
+            <a href="https://www.linkedin.com/in/bruce-lesko/">
+              <h2>LinkedIn</h2>
+            </a>
+          </div>
+          <div id="twitter">
+            <a href="https://twitter.com/B_Lesko?lang=en"><h2>Twitter</h2>
+            </a>
+          </div>
+      </div>  
+    </nav>
     <section class="sections">
       <div id="logo_banner">
         <div><img src="images/html5_logo.png" alt="html five logo"/></div>
