--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="follow, index, archive"/>
     <meta name="author" content="Bruce Lesko"/>
     <link rel="stylesheet" href="style.css"/>
-
+    <link rel="shortcut icon" href="ruby-logo.png">
     <title>Bruce Lesko</title>
   </head>
   <body class="body">
@@ -40,7 +40,7 @@
             <a href="https://twitter.com/B_Lesko?lang=en"><h2>Twitter</h2>
             </a>
           </div>
-      </div>  
+      </div>
     </nav>
     <section class="sections">
       <div id="logo_banner">
